--- a/scripts/makefile-pcasso
+++ b/scripts/makefile-pcasso
@@ -14,7 +14,7 @@ DIR=$(NAME)_$(VERSION)
 #- REQUIRED TOP RULES --------------------------------------------------#
 #-----------------------------------------------------------------------#
 
-all: pcasso_505 pcasso_505blackox
+all: pcasso_505
 
 clean:
 	rm -f  pcasso_505*.sh
@@ -25,18 +25,19 @@ clean:
 #- INVISIBLE INTERNAL SUB RULES ----------------------------------------#
 #-----------------------------------------------------------------------#
 
-pcasso_505 pcasso_505blackox: .FORCE
+pcasso_505: .FORCE
 	@#
 	@# configure and build solver
 	@#
 	mkdir -p $(DIR)/build
 	cd $(DIR)/build; cmake -DQUIET=ON -DCMAKE_BUILD_TYPE=Release -DSTATIC_BINARIES=ON -DCLASSIFIER=ON ..
+	cd $(DIR)/build; make libpca-static
+	patch $(DIR)/armadillo/armadillo_bits/config.hpp < $(DIR)/libpca/config-pcasso.patch
 	cd $(DIR)/build; make pcasso
 	@#
 	@# copy call-scripts and binary
 	@#
 	cp $(DIR)/build/bin/pcasso .
-	cp $(DIR)/scripts/pcasso_505*.sh .
 
 .FORCE:
 .PHONY: all clean
