fix build files

--- a/scripts/makefile-pcasso
+++ b/scripts/makefile-pcasso
@@ -32,7 +32,8 @@ pcasso_505: .FORCE
 	mkdir -p $(DIR)/build
 	cd $(DIR)/build; cmake -DQUIET=ON -DCMAKE_BUILD_TYPE=Release -DSTATIC_BINARIES=ON -DCLASSIFIER=ON ..
 	cd $(DIR)/build; make libpca-static
-	patch $(DIR)/armadillo/armadillo_bits/config.hpp < $(DIR)/libpca/config-pcasso.patch
+	@# patches are different depending on installed libraries, hence copy the fixed file
+	
 	cd $(DIR)/build; make pcasso
 	@#
 	@# copy call-scripts and binary
