fix onlineDRATcheck, add HBR, adapt lib interface for NuSVM

--- a/coprocessor/CMakeLists.txt
+++ b/coprocessor/CMakeLists.txt
@@ -22,6 +22,7 @@ set(LIB_SOURCES
     Experimental.cc
     FourierMotzkin.cc
     HiddenTautologyElimination.cc
+    hbr.cc
     LiteralAddition.cc
     OutputFormula.cc
     Probing.cc
