first features version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,7 @@ endif()
 add_component(riss/)
 add_component(risslibcheck/)
 add_component(classifier/)
+add_component(features/)
 add_component(libpca/)
 add_component(coprocessor/)
 add_component(externalTools/)
