tools: improve model checker
Make sure the verifier is rebuild. Furthermore, bail if models do not fit
the formula restrictions.

--- a/tools/checker/Makefile
+++ b/tools/checker/Makefile
@@ -23,7 +23,7 @@ cnfuzz: cnfuzz.c Makefile
 drat-trim: drat-trim.c
 	gcc -O2 -o drat-trim drat-trim.c -static -lrt
 
-verify: 
+verify: verify_model.c
 	g++ verify_model.c -o verify -O3 
 
 clean:
