gcc: ignore class-memaccess warning
In the vector, we (still) use malloc, free and realloc to manage
memory. However, many vectors store elements like literals, which
are maintained as class. Recent compilers throw a warning. As
literals are just a number, this warning can be ignored.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,8 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     message(STATUS "enable verbose compiler warnings")
     add_definitions("-Wall -Wextra -ffloat-store -Wno-unused-but-set-variable"
                     "-Wno-unused-variable -Wno-unused-function -Wno-unused-parameter"
-                    "-Wno-sign-compare -Wno-parentheses -Wno-delete-non-virtual-dtor")
+                    "-Wno-sign-compare -Wno-parentheses -Wno-delete-non-virtual-dtor"
+                    "-Wclass-memaccess")
    endif()
    if(QUIET)
      message(STATUS "disable #warnings")
